[project]
name = "neuncut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==1.24.1",
    "scikit-learn",
    "munkres==1.1.4",
    "torch==2.7.0",
    "torchaudio==2.7.0",
    "torchvision==0.22.0",
]

[tool.uv.sources]
torch = { index = "torch-gpu" }
torchaudio = { index = "torch-gpu" }
torchvision = { index = "torch-gpu" }

[[tool.uv.index]]
name = "torch-gpu"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
